pkg/workloads/v4l2rtspserver/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtsp0
  namespace: v4l2rtspserver
  labels:
    app: rtsp0
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rtsp0
  template:
    metadata:
      name: rtsp0
      namespace: v4l2rtspserver
      labels:
        app: rtsp0
    spec:
      containers:
      - name: rtsp0
        livenessProbe:
          tcpSocket:
            port: rtsp-tcp
          initialDelaySeconds: 120
        image: docker.io/mpromonet/v4l2rtspserver:latest
        securityContext:
          privileged: true
          procMount: Unmasked
          # TODO configure only required capabilities
          # TODO configure seccomp profiles
          # capabilities:
            # add:
            # - CAP_SYS_RAWIO
            # - CAP_NET_RAW
            # - CAP_NET_BIND_SERVICE
            # - CAP_SYS_NICE
        ports:
        - containerPort: 8554
          name: rtsp-tcp
          protocol: TCP
        - containerPort: 8554
          name: rtsp-udp
          protocol: UDP
        - containerPort: 8085
          name: rtsp-hls
        volumeMounts:
        # Used to find sound capture device for alsa stream
        - name: video0
          mountPath: /dev/video0
        # Compressed video (v4l2loopback) capture device
        - name: video10
          mountPath: /dev/video10
        - name: snd0
          mountPath: /dev/snd
        resources:
          requests:
            memory: "200Mi"
            cpu: "1000m"
          limits:
            memory: "500Mi"
            cpu: "2000m"
      securityContext:
        # TODO map video group to k3s-agent
        # Create v4l2 user
        # runAsGroup: 985
        runAsUser: 0
      volumes:
      - name: snd0
        hostPath:
          path: /dev/snd
          type: Directory
      # Capture device
      - name: video0
        hostPath: 
          path: /dev/video0
          type: CharDevice
      # v4l2loopback device
      - name: video10
        hostPath: 
          path: /dev/video10
          type: CharDevice
      dnsPolicy: ClusterFirst
      restartPolicy: Always
