pkg/workloads/v4l2rtspserver/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtsp0-hls
  namespace: v4l2rtspserver
  labels:
    app: rtsp0
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: rtsp0.app.rick.expresso.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rtsp0-hls
            port:
              name: hls
